trybuild-qcell/src/compiletest/qcell_noalloc-13.stderr
error[E0277]: `Cell<i32>` cannot be shared between threads safely
 --> src/compiletest/qcell_noalloc-13.rs:8:15
  |
8 |     is_sync::<QCell<Cell<i32>>>();  // Compile fail
  |               ^^^^^^^^^^^^^^^^ `Cell<i32>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `Cell<i32>`
  = note: required for `QCell<Cell<i32>>` to implement `Sync`
note: required by a bound in `is_sync`
 --> src/compiletest/qcell_noalloc-13.rs:7:19
  |
7 |     fn is_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `is_sync`
